[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "agent-session-resume"
version = "0.1.1"
description = "A TUI picker to resume recent coding-agent sessions across agents and folders."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Kyu Park", email = "park@kyu.co" }]
keywords = ["cli", "tui", "coding-agents", "claude", "codex", "cursor", "opencode"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/kyupark/agent-session-resume"
Repository = "https://github.com/kyupark/agent-session-resume"
Issues = "https://github.com/kyupark/agent-session-resume/issues"

[project.scripts]
resume = "agent_session_resume.cli:main"
agent-resume = "agent_session_resume.cli:main"
